Alignment fix

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   padding: 0;
 }
+
 body {
   background-color: #313638;
   font-family: "Galindo", sans-serif;
@@ -21,7 +22,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) translateY(0);
-  transition: transform 1s ease, opacity 1s ease;
+  transition: transform 1s ease;
   height: 100%;
   background: #e0dfd5;
   color: #313638;
@@ -33,9 +34,12 @@ body {
   font-family: "Press Start 2P", system-ui;
 }
 @media (max-width: 600px) {
-  ul {
-    flex-direction: column; /* stack items vertically */
-    align-items: stretch;   /* optional */
+  .list {
+    flex-direction: column;
+    align-items: stretch;  
+  }
+  li {
+    margin: 1rem 0;
   }
 }
 #loader h1 {
@@ -49,7 +53,7 @@ body {
   margin: 1rem 0;
   width: 90%;
 }
-ul {
+.list {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -59,7 +63,7 @@ h1 {
   vertical-align: middle;
 }
 
-li {
+.list div {
   padding: 1.5rem;
   margin: 1rem;
   background-color: #f06543;
